--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.7.0",
+    "@jest/globals": "^29.3.1",
+    "@parcel/transformer-sass": "^2.8.0",
     "@parcel/transformer-typescript-tsc": "^2.8.0",
     "@parcel/validator-typescript": "^2.8.0",
+    "@types/jest": "^29.2.3",
     "buffer": "^5.7.1",
-    "parcel": "^2.8.0"
+    "cd": "^0.3.3",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "parcel": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
+  },
+  "scripts": {
+    "test": "npx jest --watchAll"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "html"
+    ]
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
-    "axios": "^1.1.3"
+    "axios": "^1.2.0"
   }
 }
